--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -109,26 +109,46 @@
               box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
             }
 
-            .wood-text {
-                    background: url('/static/gradient_1.jpg');
-                    background-size: cover;
-                    position: relative;
-                    font-size: 30px;
-                    text-transform: uppercase;
-                    font-family:Futura;
-                    background-clip: text;
-                    -webkit-background-clip: text;
-                    color: transparent;
-                    &:after {
-                      $stroke-width: $extra-large * 0.05;
-                      content: $random-text;
-                      position: absolute;
-                      -webkit-text-stroke-width: $stroke-width;
-                      -webkit-text-stroke-color: rgba(black, 0.6);
-                      left: 2px;
-                      top: 2px
-                    }
-                  }
+            .tab {
+              overflow: hidden;
+              border: 1px solid #ccc;
+              background-color: #f1f1f1;
+            }
+
+            /* Style the buttons that are used to open the tab content */
+            .tab button {
+              background-color: inherit;
+              float: left;
+              border: none;
+              outline: none;
+              cursor: pointer;
+              padding: 14px 16px;
+              transition: 0.3s;
+            }
+
+            /* Change background color of buttons on hover */
+            .tab button:hover {
+              background-color: #ddd;
+            }
+
+            /* Create an active/current tablink class */
+            .tab button.active {
+              background-color: #ccc;
+            }
+
+            /* Style the tab content */
+            .tabcontent {
+              display: none;
+              padding: 6px 12px;
+              border: 1px solid #ccc;
+              border-top: none;
+            }
+
+            table tr { display: none; }
+            table tr.active { display: table-row; }
+
+
+
 
         </style>
     </head>
@@ -157,7 +177,16 @@
 <!--       <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas> -->
 <div id="container" style="height: 400px; min-width: 900px"></div>
 
+
+
+
       <h2>Preprocessed Heat Alerts</h2>
+      <div class="tab">
+      <button class="tablinks" onclick="openTab(event, 'Farm')" id="defaultOpen">Farm Data</button>
+      <button class="tablinks" onclick="openTab(event, 'User')">User Input</button>
+      </div>
+
+      <div id="Farm" class="tabcontent">
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
@@ -198,16 +227,129 @@
             {% endif %}
           <tbody>
         </table>
+        <a href="#" class="load_more">Load more</a>
       </div>
+    </div>
+
+    <div id="User" class="tabcontent">
+      <form>
+  <div class="mb-3">
+    <label for="cowIdInput" class="form-label">Cow ID</label>
+    <input type="number" class="form-control" id="cowIdInput" aria-describedby="idHelp">
+    <div id="idHelp" class="form-text">Input the unique 4-digit cow ID.</div>
+  </div>
+  <div class="mb-3">
+    <label for="heatInput" class="form-label">DIMatheat</label>
+    <input type="number" class="form-control" id="heatInput">
+  </div>
+  <div class="mb-3">
+    <label for="startInput" class="form-label">SB_HTSTARTS</label>
+    <input type="time" class="form-control" id="startInput">
+  </div>
+  <div class="mb-3">
+    <label for="endInput" class="form-label">SB_HTENDS</label>
+    <input type="time" class="form-control" id="endInput">
+  </div>
+  <div class="mb-3">
+    <label for="probInput" class="form-label">SB_PROB</label>
+    <input type="number" class="form-control" id="probInput">
+  </div>
+  <div class="mb-3">
+    <label for="bcodeInput" class="form-label">BCODE</label>
+    <input type="text" class="form-control" id="bcodeInput">
+  </div>
+  <div class="mb-3">
+    <label for="aclevInput" class="form-label">DC_ACLEV</label>
+    <input type="number" class="form-control" id="aclevInput">
+  </div>
+  <div class="mb-3">
+    <label for="actimInput" class="form-label">DC_ACTIM</label>
+    <input type="number" class="form-control" id="actimInput">
+  </div>
+<!--   <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div> -->
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+<div class="result">Click Add!</div>
+  
+    </div>
+
     </main>
   </div>
 </div>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
         <script type="text/javascript">
+
+
+
+document.getElementById("defaultOpen").click();
+
+function openTab(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(tabName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+
+$('table tr').filter(':lt(' + 15 + ')').addClass('active');
+
+$('a.load_more').on('click', function(e) {
+  e.preventDefault();  
+  var $rows = $('table tr');
+  var lastActiveIndex = $rows.filter('.active:last').index();
+  $rows.filter(':lt(' + (lastActiveIndex + 20) + ')').addClass('active');
+});
+
+document.addEventListener("submit", sendData);
+      function sendData(e) {
+        e.preventDefault();
+        const id = document.querySelector("#cowIdInput").value;
+        const heat = document.querySelector("#heatInput").value;
+        const start = document.querySelector("#startInput").value;
+        const end = document.querySelector("#endInput").value;
+        const prob = document.querySelector("#probInput").value;
+        const bcode = document.querySelector("#bcodeInput").value;
+        const aclev = document.querySelector("#aclevInput").value;
+        const actim = document.querySelector("#actimInput").value;
+
+        fetch("http://20.62.235.135:80/api/v1/service/neural-network-inference/score", {
+          method: "GET",
+          headers: {'Content-Type':'application/json', 'Authorization':('Bearer eTIYfHKfTxbOrvNTuAVe3EwVarxDPjL6')}
+          // body: JSON.stringify({
+          //   id: parseInt(id),
+          //   heat: parseInt(heat),
+          //   start: start,
+          //   end: end,
+          //   prob: parseInt(prob),
+          //   bcode: bcode,
+          //   aclev: parseInt(aclev),
+          //   actim: parseInt(actim)
+          // })
+        })
+          .then(res => res.json())
+          .then(data => {
+            const { result } = data;
+            document.querySelector(
+              ".result"
+            ).innerText = `The predicted pregnancy state is: ${result}`;
+          })
+          .catch(err => console.log(err));
+      }
+
             
             // Create the chart
 Highcharts.stockChart('container', {
